--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+        <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="container">
+        <h1>Git</h1>
+        <h2>an open-source version control system</h2>
+        <img src="https://git-scm.com/images/logo@2x.png" alt="">
+        <a href="https://git-scm.com/doc" class="btn btn-dark git-link">See More</a>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
