Add style to index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <h1>Git</h1>
-        <h2>an open-source version control system</h2>
+        <h2>open-source version control system</h2>
         <img src="https://git-scm.com/images/logo@2x.png" alt="">
         <a href="https://git-scm.com/doc" class="btn btn-dark git-link">See More</a>
     </div>
